--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link href="https://fonts.googleapis.com/css?family=Dosis:200,300,800" rel="stylesheet">
 	<link href="style.css" rel="stylesheet">
+	<link href="https://endre88.github.io/Product_Landing_Page/032grid.css" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
